# tabletop

./: .gitignore  Cargo.toml  tabletop.sqlite3
data/: Cargo.toml
data/src/: hex_grids.rs  lib.rs
data/src/cards/: action.rs  armor_modifier.rs  attack.rs  interaction.rs  item.rs  level.rs  mod.rs  stat_modifier.rs  test_support.rs  unit.rs
data/src/shared/: mod.rs
migrations/: 0001_cards.sql  0001_init.sql  0002_levels.sql  0002_stat_modifiers.sql  0003_actions.sql  0003_hex_tiles_associations.sql  0004_action_links.sql  0005_allow_multiple_action_links.sql  0006_armor_modifiers.sql  0007_armor_modifiers_damage_type.sql  0008_hex_grids.sql  0009_hex_grids_name.sql
simulator/: Cargo.toml  README.md
simulator/migrations/: 0001_campaigns.sql
simulator/src/: main.rs  types.rs
simulator/src/app/: handlers.rs  mod.rs  router.rs  simulator.rs  state.rs
simulator/src/db/: mod.rs
simulator/src/pages/: campaign_home.rs  continue_campaign.rs  load_scenario.rs  main_menu.rs  mod.rs  scenario_test.rs  start_campaign.rs
tools/: Cargo.toml  README.md
tools/migrations/: 0001_create_schema_migrations.sql
tools/src/: cards.rs  main.rs
tools/src/app/: cards.rs  cli.rs  db.rs  migrations.rs  mod.rs  paths.rs
tools/src/app/cards/: action.rs  armor_modifier.rs  attack.rs  interaction.rs  item.rs  level.rs  mod.rs  stat_modifier.rs  unit.rs
tools/src/cards/: item.rs  level.rs  unit.rs
tools/src/gui/: mod.rs
tools/src/gui/shared/: form_parsing.rs  mod.rs
tools/src/gui/views/: actions.rs  armor_modifiers.rs  hex_grids.rs  items.rs  levels.rs  mod.rs  units.rs
tools/src/gui/views/shared/: associated_actions.rs  mod.rs
