[package]
name = "tools"
version = "0.1.0"
edition = "2024"

[features]
default = ["gui"]

# GUI app (default)
gui = ["dep:iced", "dep:tokio"]

[dependencies]
data = { path = "../data", features = ["bundled-sqlite"] }
rusqlite = { version = "0.31", features = ["bundled"] }
anyhow = "1"



# GUI
iced = { version = "0.12", features = ["tokio", "canvas"], optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros"], optional = true }

[profile.release]
lto = true
